...
              <Text className="text-xs font-medium text-white opacity-80" numberOfLines={1}>
                {todaysJournalTitle.replace('Journal ', '')}
              </Text>
            }
            showTabletDecoration={isTablet}
            onPress={handleOpenTodaysJournal}
            testID="home.button.open-journal"
          />
        </View>

        <Pressable
          testID="home.button.open-calendar"
          onPress={() => navigation.navigate('Calendar', {})}
...
