appId: com.xaventra.gitnotes
name: iOS - Notes List Flow
tags:
  - full
  - ios
  - notes
---

- launchApp:
    clearState: false

- tapOn:
    id: tab-bar.tab.press-NotesTab

- assertVisible:
    id: notes-list.search-bar.search

- inputText:
    id: notes-list.search-bar.search
    text: "test search"

- tapOn:
    id: notes-list.search-bar.search
- eraseText: 50

- tapOn:
    id: notes-list.icon-button.view-mode

- assertVisible:
    id: notes-view-mode.button.close

- tapOn:
    id: notes-view-mode.button.change-list

- tapOn:
    id: notes-list.icon-button.filters

- assertVisible:
    id: notes-filter-modal.button.close

- tapOn:
    id: notes-filter-modal.button.close

- tapOn:
    id: notes-list.icon-button.sync

- tapOn:
    id: notes-list.button.select-repo
